@@ -218,7 +218,7 @@ AP_DECLARE(apr_status_t) ap_mpm_query(int query_code, int *result)
         case AP_MPMQ_MAX_THREADS:
             *result = ap_threads_limit;
             return APR_SUCCESS;
-        case AP_MPMQ_MIN_SPARE_DEAMONS:
+        case AP_MPMQ_MIN_SPARE_DAEMONS:
             *result = 0;
             return APR_SUCCESS;
         case AP_MPMQ_MIN_SPARE_THREADS:
@@ -230,7 +230,7 @@ AP_DECLARE(apr_status_t) ap_mpm_query(int query_code, int *result)
         case AP_MPMQ_MAX_SPARE_THREADS:
             *result = ap_threads_max_free;
             return APR_SUCCESS;
-        case AP_MPMQ_MAX_REQUESTS_DEAMON:
+        case AP_MPMQ_MAX_REQUESTS_DAEMON:
             *result = ap_max_requests_per_child;
             return APR_SUCCESS;
         case AP_MPMQ_MAX_DAEMONS:
